# django_dz

./: blog_data.json  catalog_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview_alter_blog_slug.py  0003_rename_created_date_blog_created_at.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_id_alter_product_image.py  0002_category_created_at.py  0003_alter_category_options_alter_product_options.py  0004_alter_category_options.py  0005_alter_product_options.py
catalog/templates/catalog/: base.html  contacts.html  index.html  product_detail.html  product_details.html  product_list.html
catalog/templates/catalog/includes/: inc_pagination.html  inc_product_detail.html  inc_product_details.html
catalog/templatetags/: path_tags.py
config/: settings.py
