[tool.poetry]
name = "19-2-dz"
version = "0.1.0"
description = ""
authors = ["LQP <homepc@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
